[Sidhodhan]Modify: Lambda Function For Calculate Employee Wage No Of Days

--- a/my-service/serverless.yml
+++ b/my-service/serverless.yml
@@ -94,8 +94,8 @@ functions:
     handler: functions/calculateWageNoWorkingDays.calculateWageNoWorkingDays
     events: # uncomment these lines
       - http:
-          path: calculateWageNoWorkingDays/get
-          method: get
+          path: calculateWageNoWorkingDays
+          method: post
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
